footer: fix styling on small screens

--- a/static/index.css
+++ b/static/index.css
@@ -18,7 +18,7 @@ body {
 
 @media (max-width: 800px) {
   body {
-    margin-bottom: 170px;
+    margin-bottom: 200px;
   }
 }
 
